--- a/PágI.css
+++ b/PágI.css
@@ -66,6 +66,28 @@ header {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
 }
 
+/*RODAPé*/
+footer {}
+
+.infofooter {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-bottom: 5px;
+
+}
+
+#logo {
+    /* logo do if no footer */
+    position: relative;
+    top: 80px;
+    align-items: center;
+    width: 70px;
+    height: auto;
+
+
+}
+
 /* Logo */
 #imgComTexto {
     height: 100px;
@@ -84,21 +106,28 @@ header {
 
 /* LIVROS */
 section {
-    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-items: end;
+
+    width: 800px;
     margin: 2em auto;
 }
 
+
+
 .livro {
     font-size: large;
-    display: flex;
-    align-items: center;
-    gap: 1em;
+    width: 90%;
+    gap: 5em;
     height: auto;
     padding: 1em;
     border: 5px solid black;
+    margin-left: 5em;
+    margin-right: 2em;
     margin-bottom: 2em;
     background-color: azure;
-    flex-wrap: wrap;
+
 }
 
 #imagem {
