--- a/PágI.css
+++ b/PágI.css
@@ -57,9 +57,7 @@ body {
 header {
     position: fixed;
     display: flex;
-    flex-direction: row;
     align-items: center;
-    justify-content: flex-start;
     gap: 20px;
     top: 0px;
     padding: 20px;
@@ -73,27 +71,41 @@ header {
 /* Logo */
 #imgComTexto {
     position: relative;
-    height: 200px;
+    height: 250px;
     width: auto;
     object-fit: contain;
 
 }
 
+
 /* Título */
 .TituloP {
-    position: absolute;
+    position: relative;
+    display: flex;
+    align-items: center;
+    top: -30%;
+    left: 15%;
     font-family: "Great Vibes", serif;
-   left: 50%;
-right: 50%;
     font-weight: 400px;
     font-style: normal;
-    font-size: 4em;
+    font-size: 3.4em;
     color: rgb(49, 80, 32);
+    white-space: nowrap;
+
+}
+
+#subtitulo {
+    font-weight: none;
+    position: relative;
+    display: flex;
+ align-items: center;
+ justify-content: center;
+    left: -30%;
+    top: 25%;
     white-space: nowrap;
 }
 
 /*RODAPé*/
-footer {}
 
 .infofooter {
     display: flex;
@@ -103,8 +115,8 @@ footer {}
 
 }
 
-#logo {
-    /* logo do if no footer */
+#logo {/* logo do if no footer */
+    
     position: relative;
     top: 140px;
     align-items: center;
