--- a/PágI.css
+++ b/PágI.css
@@ -37,7 +37,7 @@ margin-top: -4em;
 }
 
 #menu-toggle:hover{
-transform: scale(1.2);
+transform: scale(1.05);
 filter: brightness(0.7);
 }
 
@@ -77,6 +77,24 @@ transition: transform 0.3s;
 #botao-livro img:hover{
     transform: scale(1.05);
 }
+
+#botao-calendario img{
+    display: block;
+    text-align: center;
+    position: relative;
+    left: 5px;
+    justify-content: center;
+    align-items: center;
+    width: 120px;
+    height: auto;
+    border-radius: 5px;
+    transition: transform 0.3s;
+}
+
+#botao-calendario img:hover{
+    transform: scale(1.05);
+}
+
 
 /* CABEÇALHO */
 header {
