--- a/PágI.css
+++ b/PágI.css
@@ -28,7 +28,7 @@ body {
 #menu-toggle {
     display: flex;
     font-size: 24px;
-margin-top: -4em;
+    margin-top: -4em;
     border: none;
     background: none;
     cursor: pointer;
@@ -36,9 +36,9 @@ margin-top: -4em;
     transition: transform 0.3s ease, filter 0.2s ease;
 }
 
-#menu-toggle:hover{
-transform: scale(1.05);
-filter: brightness(0.7);
+#menu-toggle:hover {
+    transform: scale(1.05);
+    filter: brightness(0.7);
 }
 
 .menu {
@@ -60,25 +60,26 @@ filter: brightness(0.7);
     margin-bottom: 5px;
 }
 
-#botao-livro img{ /*botao de livro no menu */
-display: block;
-text-align: center;
-position: relative;
-left: 20px;
-justify-content: center;
-align-items: center;
-width: 100px;
-height: auto;
-border-radius: 5px;
-transition: transform 0.3s;
+#botao-livro img {
+    /*botao de livro no menu */
+    display: block;
+    text-align: center;
+    position: relative;
+    left: 20px;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: auto;
+    border-radius: 5px;
+    transition: transform 0.3s;
 
 }
 
-#botao-livro img:hover{
+#botao-livro img:hover {
     transform: scale(1.05);
 }
 
-#botao-calendario img{
+#botao-calendario img {
     display: block;
     text-align: center;
     position: relative;
@@ -91,7 +92,7 @@ transition: transform 0.3s;
     transition: transform 0.3s;
 }
 
-#botao-calendario img:hover{
+#botao-calendario img:hover {
     transform: scale(1.05);
 }
 
@@ -108,7 +109,7 @@ header {
     width: 100%;
     height: 20%;
     overflow: hidden;
-  
+
     background-color: white;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
 }
@@ -161,16 +162,17 @@ header {
     transform: X(-50%);
     background-color: black;
     z-index: 1000;
+    box-shadow: 6px 0px 9px rgba(0, 0, 0, 0.3);
 }
 
 .linhahorizontal {
     position: fixed;
     top: 20%;
     bottom: 3;
-    
-height: 5px;
+
+    height: 5px;
     background-color: black;
-       transform: X(-50%);
+    transform: X(-50%);
     z-index: 1000;
 }
 
@@ -241,27 +243,35 @@ section {
 
 /*RODAPé*/
 
-.infofooter {
+footer {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    margin-bottom: 5px;
+    flex-direction: column;
+
+
 
 }
-#caixa-logoif{
-   position: absolute;
+
+.infofooter {
+    position: relative;
+    bottom: -30px;
+}
+
+#caixa-logoif {
+    position: absolute;
     display: flex;
     justify-content: center;
-  flex-direction: column;
+    flex-direction: column;
     align-items: center;
     bottom: 8em;
 
 
 }
+
 #logo {
     /* logo do if*/
     align-items: center;
-   width: 50%;
+    width: 50%;
     height: auto;
 
 
