--- a/Telalogin.css
+++ b/Telalogin.css
@@ -8,14 +8,16 @@ body {
     justify-content: center;
     height: 100vh;
     margin: 0;
-    background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    background: linear-gradient(135deg, #bea56f 0%, #d6af83 100%);
+    background-color: #deb887;
+
 }
 
 .welcome {
     font-size: 3em;
     font-weight: 700;
     margin-bottom: 40px;
-    color: #333;
+    color: #855000;
     text-transform: uppercase;
     letter-spacing: 3px;
     text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
