--- a/PágI.css
+++ b/PágI.css
@@ -178,7 +178,7 @@ header {
 
 
 #livrosemana {
-    margin-top: 2em;
+    margin-top: 3em;
     display: flex;
     justify-content: center;
 
@@ -253,8 +253,10 @@ footer {
 }
 
 .infofooter {
-    position: relative;
-    bottom: -30px;
+display: flex;
+justify-content: end;
+flex-direction: row;
+margin-bottom: -40px;
 }
 
 #caixa-logoif {
