--- a/PágI.css
+++ b/PágI.css
@@ -12,6 +12,47 @@ body {
     font-family: sans-serif;
 }
 
+#livrosemana {
+    display: flex;
+    justify-content: center;
+
+}
+
+#textolivro {
+    color: white;
+    margin-top: -2.2em;
+    /*distancia do texto da parte de cima da box*/
+    text-align: center;
+}
+
+#fundo {
+    border-radius: 15%;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(100, 151, 58);
+    width: 15em;
+    height: 5em;
+}
+
+.topicos{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+margin-top: 6em;
+}
+
+#btn-cadastrar-livro img{
+    background-color: none;
+    width: 100px;
+    height: 100px;
+
+
+    
+}
+
+
+
+
 /* Menu fixo no canto */
 .menu-container {
     position: fixed;
@@ -39,18 +80,6 @@ body {
 #menu-toggle:hover {
     transform: scale(1.05);
     filter: brightness(0.7);
-}
-
-.menu {
-    display: none;
-    position: absolute;
-
-    left: 0;
-    background-color: white;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    padding: 10px;
-    border-radius: 8px;
-    z-index: 998;
 }
 
 .menu a {
@@ -174,30 +203,6 @@ header {
     background-color: black;
     transform: X(-50%);
     z-index: 1000;
-}
-
-
-#livrosemana {
-    margin-top: 2em;
-    display: flex;
-    justify-content: center;
-
-}
-
-#textolivro {
-    color: white;
-    margin-top: -2.2em;
-    /*distancia do texto da parte de cima da box*/
-    text-align: center;
-}
-
-#fundo {
-    border-radius: 15%;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(100, 151, 58);
-    width: 15em;
-    height: 5em;
 }
 
 main {
