--- a/PágI.css
+++ b/PágI.css
@@ -34,24 +34,55 @@ body {
     height: 5em;
 }
 
-.topicos{
+.topicos {
     display: flex;
     align-items: center;
     justify-content: center;
-margin-top: 6em;
+    margin-top: -2em;
 }
 
-#btn-cadastrar-livro img{
-    background-color: none;
+#container-cad-livro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
+}
+
+#btn-cadastrar-livro {
+    display: flex;
+    margin-top: 50px;
+    margin-right: 40px;
+    margin-left: 50px;
+    /* border: none; */
+    background: none;
+    padding: 0;
+    cursor: pointer;
     width: 100px;
-    height: 100px;
-
-
-    
+    box-sizing: border-box;
+    align-items: center;
+    justify-content: center;
 }
 
+#btn-cadastrar-livro img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    margin-top: -35%;
 
 
+}
+
+.texto-cad-livro {
+    display: flex;
+    justify-content: center;
+    margin-top: -30px;
+    width: 50px;
+    height: 50px;
+    white-space: nowrap;
+}
 
 /* Menu fixo no canto */
 .menu-container {
@@ -249,16 +280,16 @@ section {
 /*RODAPé*/
 
 footer {
-	display: flex;
-	align-items: center;
-	flex-direction: column;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .infofooter {
-display: flex;
-justify-content: end;
-flex-direction: row;
-margin-bottom: -40px;
+    display: flex;
+    justify-content: end;
+    flex-direction: row;
+    margin-bottom: -40px;
 }
 
 
