--- a/PágI.css
+++ b/PágI.css
@@ -105,6 +105,32 @@ body {
 
 }
 
+#btn-cadastrar-bolsista {
+    display: flex;
+    margin-top: 50px;
+    margin-right: 40px;
+    margin-left: 50px;
+    border: none; 
+    background: none;
+    padding: 0;
+    cursor: pointer;
+    width: 100px;
+    box-sizing: border-box;
+    align-items: center;
+    justify-content: center;
+     transition: all 0.6s ease; /* Suaviza a animação */
+}
+
+#btn-cadastrar-bolsista img{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    margin-top: -40%;
+}
+
 #texto-cad-livro {
     display: flex;
     justify-content: center;
