--- a/Telalogin.css
+++ b/Telalogin.css
@@ -1,4 +1,7 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+
+
 /* Estilos para a tela de login */
 body {
     font-family: 'Avenir', 'Helvetica Neue', sans-serif;
@@ -11,6 +14,20 @@ body {
     background: linear-gradient(135deg, #bea56f 0%, #d6af83 100%);
     background-color: #deb887;
 
+}
+
+header{
+    margin-top: -10%;
+    width: 100%;
+    height: 40%;
+}
+
+#TituloP{
+    font-family: "Great Vibes", serif;
+    margin-top: 120px;
+    font-size: 5em;
+    text-align: center;
+    color: rgb(49, 80, 32);
 }
 
 .welcome {
