--- a/PágI.css
+++ b/PágI.css
@@ -175,11 +175,11 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 9999;
+ 
 }
 
 .modal-content {
@@ -197,18 +197,13 @@ body {
     cursor: pointer;
 }
 
-/* Quando o modal estiver aberto */
-.modal[style*="display: flex"]~.menu-container {
-    opacity: 0.1;
-    /* Escurece o menu */
-    transition: opacity 0s ease;
+.close-modalB {
+    float: right;
+    font-size: 24px;
+    cursor: pointer;
 }
 
-/* Escurece o fundo do modal */
-.modal {
-    background: rgba(0, 0, 0, 0.5);
-    /* Fundo escuro semi-transparente */
-}
+
 
 #form-livro input,
 #form-livro textarea {
@@ -219,10 +214,25 @@ body {
     border-radius: 5px;
 }
 
+#form-bolsista input,
+#form-bolsista textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
 #form-livro textarea {
     height: 100px;
     resize: vertical;
+} 
+
+#form-bolsista textarea {
+    height: 100px;
+    resize: vertical;
 }
+
 
 #form-livro button {
     background: #7a4500;
@@ -233,6 +243,14 @@ body {
     cursor: pointer;
 }
 
+#form-bolsista button {
+    background: #7a4500;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
 
 .capa-livro {
     width: 50%;
